tests/ui/label/label-static.stderr
error: labels cannot use keyword names
  --> $DIR/label-static.rs:2:5
   |
LL |     'static: loop {
   |     ^^^^^^^

error: labels cannot use keyword names
  --> $DIR/label-static.rs:3:15
   |
LL |         break 'static
   |               ^^^^^^^

error: aborting due to 2 previous errors

