tests/ui/label/label-static.rs
fn main() {
    'static: loop { //~ ERROR invalid label name `'static`
        break 'static //~ ERROR invalid label name `'static`
    }
}
